crates/formatter/tests/snapshots/snapshots__synapse__main__delta__61__01change_appservices_txns.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2021 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- we use bigint elsewhere in the database for appservice txn ids (notably,
-- application_services_state.last_txn), and generally we use bigints everywhere else
-- we have monotonic counters, so let's bring this one in line.
--
-- assuming there aren't thousands of rows for decommisioned/non-functional ASes, this
-- table should be pretty small, so safe to do a synchronous ALTER TABLE.

alter table application_services_txns alter column txn_id set data type bigint;
