crates/formatter/tests/snapshots/snapshots__synapse__main__delta__61__01insertion_event_lookups.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2021 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- Add a table that keeps track of "insertion" events and
-- their next_chunk_id's so we can navigate to the next chunk of history.
create table if not exists insertion_events (
	event_id text not null,
	room_id text not null,
	next_chunk_id text not null
);
create unique index if not exists insertion_events_event_id
	on insertion_events (event_id);
create index if not exists insertion_events_next_chunk_id
	on insertion_events (next_chunk_id);

-- Add a table that keeps track of all of the events we are inserting between.
-- We use this when navigating the DAG and when we hit an event which matches
-- `insertion_prev_event_id`, it should backfill from the "insertion" event and
-- navigate the historical messages from there.
create table if not exists insertion_event_edges (
	event_id text not null,
	room_id text not null,
	insertion_prev_event_id text not null
);

create unique index if not exists insertion_event_edges_event_id
	on insertion_event_edges (event_id);
create index if not exists insertion_event_edges_insertion_room_id
	on insertion_event_edges (room_id);
create index if not exists insertion_event_edges_insertion_prev_event_id
	on insertion_event_edges (insertion_prev_event_id);

-- Add a table that keeps track of how each chunk is labeled. The chunks are
-- connected together based on an insertion events `next_chunk_id`.
create table if not exists chunk_events (
	event_id text not null,
	room_id text not null,
	chunk_id text not null
);

create unique index if not exists chunk_events_event_id
	on chunk_events (event_id);
create index if not exists chunk_events_chunk_id on chunk_events (chunk_id);
